fix: prevent ui shift when displaying scroll bar

--- a/styles/global/_root.scss
+++ b/styles/global/_root.scss
@@ -1,4 +1,5 @@
 html {
+  overflow-y: scroll;
   background: #0b0911;
 }
 
